--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
